# orchid

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  ROADMAP.md  SWAP.md  clippy.toml  language-server-log.txt  lex-hello.ps1  notes.md  orchid.code-workspace  rustc-ice-2025-01-12T01_00_58-10688.txt  rustc-ice-2025-01-13T14_58_18-35820.txt  rustfmt.toml  swap.md  test-log.txt
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: rust.yml
.zed/: settings.json
examples/: scratch.hs
examples/calculator/: fn.orc  main.orc
examples/dummy_project/: Orchid.toml  main.orc
examples/file-browser/: main.orc
examples/fizz-buzz/: main.orc
examples/hello-world/: main.orc
examples/list-processing/: fn.orc  list.orc  main.orc  option.orc
examples/lite/: main.orc
examples/maps/: list.orc  main.orc  map.orc  option.orc
examples/match/: main.orc
examples/protocol/: main.orc
examples/rule_demo/: main.orc
examples/scratchpad/: main.orc
examples/vs_haskell/: typeclasses.hs  typeclasses.orc
examples/y/: main.orc
examples/yes/: main.orc
notes/: comm_arch.md  crates.md  expr_refs.md  macros.md  new_macro_model.md
notes/type_system/: definitions.md  impls.md  unification.md
orchid-api/: Cargo.toml
orchid-api-derive/: Cargo.toml
orchid-api-derive/src/: common.rs  decode.rs  encode.rs  hierarchy.rs  lib.rs
orchid-api-traits/: Cargo.toml
orchid-api-traits/src/: api_conv.rs  coding.rs  helpers.rs  hier2.rs  hierarchy.rs  lib.rs  relations.rs
orchid-api/src/: atom.rs  error.rs  expr.rs  format.rs  fs.rs  intern.rs  interner.rs  lexer.rs  lib.rs  location.rs  logging.rs  macros.rs  parser.rs  proto.rs  system.rs  tree.rs  vfs.rs
orchid-base/: Cargo.toml
orchid-base/src/: as_api.rs  box_cow.rs  boxed_iter.rs  builtin.rs  char_filter.rs  child.rs  clone.rs  combine.rs  error.rs  event.rs  format.rs  id_store.rs  intern.rs  interner.rs  join.rs  lib.rs  location.rs  logging.rs  macros.rs  match_mapping.rs  msg.rs  name.rs  number.rs  parse.rs  proj_error.rs  pure_seq.rs  reqnot.rs  rt_error.rs  sequence.rs  side.rs  system.rs  tl_cache.rs  tokens.rs  tree.rs  try_from_expr.rs
orchid-base/src/virt_fs/: common.rs  decl.rs  dir.rs  embed.rs  prefix.rs
orchid-extension/: Cargo.toml
orchid-extension/src/: atom.rs  atom_owned.rs  atom_thin.rs  conv.rs  data.rs  entrypoint.rs  error.rs  expr.rs  extension.rs  fs.rs  fun.rs  func_atom.rs  gen_expr.rs  lexer.rs  lib.rs  macros.rs  msg.rs  other_system.rs  parser.rs  proj_error.rs  rustc-ice-2025-01-19T15_18_56-277370.txt  rustc-ice-2025-01-19T15_19_06-277529.txt  rustc-ice-2025-01-19T15_19_24-277744.txt  rustc-ice-2025-01-19T15_21_19-278933.txt  rustc-ice-2025-01-19T15_21_48-279278.txt  rustc-ice-2025-01-19T15_22_25-279679.txt  rustc-ice-2025-01-19T15_25_47-282159.txt  system.rs  system_ctor.rs  tokio.rs  trait_obj_coder.rs  tree.rs  try_from_expr.rs
orchid-host/: Cargo.toml
orchid-host/src/: atom.rs  child.rs  ctx.rs  dealias.rs  execute.rs  expr.rs  expr_store.rs  extension.rs  lex.rs  lib.rs  macros.rs  parse.rs  parsed.rs  results.rs  subprocess.rs  system.rs  tree.rs
orchid-host/src/rule/: any_match.rs  build.rs  matcher.rs  mod.rs  scal_match.rs  shared.rs  state.rs  vec_attrs.rs  vec_match.rs
orchid-macros/: Cargo.toml
orchid-std/: Cargo.toml
orchid-std/src/: lib.rs  main.rs  std.rs
orchid-std/src/macros/: macro_system.rs  mactree.rs  mactree_lexer.rs  mod.rs
orchid-std/src/macros/rule/: any_match.rs  build.rs  matcher.rs  mod.rs  scal_match.rs  shared.rs  state.rs  vec_attrs.rs  vec_match.rs
orchid-std/src/number/: mod.rs  num_atom.rs  num_lexer.rs
orchid-std/src/std/: mod.rs  std_system.rs
orchid-std/src/std/number/: mod.rs  num_atom.rs  num_lib.rs
orchid-std/src/std/string/: mod.rs  str_atom.rs  str_lexer.rs  str_lib.rs
orchid-std/src/string/: mod.rs  str_atom.rs  str_leer.rs  str_lexer.rs
orchidlang/: Cargo.toml
orchidlang/src/: lib.rs  name.rs  tree.rs
orchidlang/src/facade/: macro_runner.rs  merge_trees.rs  mod.rs  unbound_ref.rs
orchidlang/src/foreign/: mod.rs  to_clause.rs
orchidlang/src/interpreter/: gen_nort.rs  nort_builder.rs  path_set.rs  run.rs
orchidlang/src/libs/: mod.rs  parse_custom_line.rs
orchidlang/src/libs/asynch/: delete_cell.rs  poller.rs
orchidlang/src/libs/directfs/: commands.rs  mod.rs  osstring.rs
orchidlang/src/libs/io/: bindings.rs  io.orc  service.rs
orchidlang/src/libs/scheduler/: busy.rs  mod.rs  system.rs
orchidlang/src/libs/std/: bool.rs  mod.rs  number.rs  panic.rs  prelude.orc  protocol.rs  result.orc  state.rs  string.orc  string.rs  tuple.orc
orchidlang/src/parse/: context.rs  errors.rs  facade.rs  lexer.rs  mod.rs  numeric.rs  parse_plugin.rs  sourcefile.rs
orchidlang/src/pipeline/: load_project.rs  mod.rs  process_source.rs
orchidlang/src/pipeline/dealias/: mod.rs
orchidlang/src/rule/: prepare_rule.rs  rule_error.rs  update_first_seq.rs  vec_attrs.rs
orchidlang/src/rule/matcher_vectree/: build.rs  mod.rs  shared.rs  vec_match.rs
orchidlang/src/utils/: combine.rs  ddispatch.rs  iter_find.rs  sequence.rs  side.rs  string_from_charset.rs  take_with_output.rs
orchidlang/src/virt_fs/: common.rs  decl.rs  mod.rs
orcx/: Cargo.toml
orcx/src/: main.rs
src/: cli.rs  error.rs  expression.rs  foreign.rs  foreign_macros.rs  lib.rs  location.rs  main.rs  name.rs  parse.rs  run_dir.rs  tree.rs
src/error/: assertion_error.rs  conflicting_roles.rs  import_all.rs  mod.rs  no_targets.rs  not_exported.rs  not_found.rs  parse_error_with_tokens.rs  project_error.rs  runtime_error.rs  too_many_supers.rs  unexpected_directory.rs  visibility_mismatch.rs
src/executor/: apply_lambda.rs  foreign.rs  mod.rs  normalize.rs  partial_hash.rs  reduction_tree.rs  syntax_eq.rs
src/facade/: environment.rs  loader.rs  macro_runner.rs  merge_trees.rs  mod.rs  pre_macro.rs  process.rs  system.rs
src/foreign/: atom.rs  cps_box.rs  error.rs  extern_fn.rs  fn_bridge.rs  implementations.rs  inert.rs  mod.rs  process.rs  to_clause.rs  try_from_expr.rs
stdio-perftest/: Cargo.toml
xtask/: Cargo.toml
(+437 files in other folders)
