[package]
name = "orchidlang"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/lbfalvy/orchid"
description = """
An embeddable pure functional scripting language
"""
authors = [
  "Lawrence Bethlenfalvy <lbfalvy@protonmail.com>"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "orcx"
path = "src/bin/orcx.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
chumsky = "0.9"
hashbrown = "0.14"
ordered-float = "3.7"
itertools = "0.11"
dyn-clone = "1.0"
clap = { version = "4.3", features = ["derive"] }
trait-set = "0.3"
paste = "1.0"
rust-embed = { version = "6.6", features = ["include-exclude"] }
duplicate = "1.0.0"
take_mut = "0.2.2"
unicode-segmentation = "1.10.1"
polling = "2.8.0"
derive_more = "0.99.17"
