[package]
name = "orchid-api-traits"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"
async-stream = "0.3.6"
futures = "0.3.31"
itertools = "0.14.0"
never = "0.1.0"
ordered-float = "5.0.0"
