[package]
name = "orchid-std"
version = "0.1.0"
edition = "2021"

[dependencies]
async-once-cell = "0.5.4"
async-std = "1.13.0"
futures = "0.3.31"
itertools = "0.14.0"
never = "0.1.0"
once_cell = "1.20.2"
orchid-api = { version = "0.1.0", path = "../orchid-api" }
orchid-api-derive = { version = "0.1.0", path = "../orchid-api-derive" }
orchid-api-traits = { version = "0.1.0", path = "../orchid-api-traits" }
orchid-base = { version = "0.1.0", path = "../orchid-base" }
orchid-extension = { version = "0.1.0", path = "../orchid-extension" }
ordered-float = "4.6.0"
tokio = { version = "1.43.0", features = ["full"] }
