[package]
name = "orchidlang"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/lbfalvy/orchid"
description = """
An embeddable pure functional scripting language
"""
authors = ["Lawrence Bethlenfalvy <lbfalvy@protonmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "orcx"
path = "src/bin/orcx.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14"
ordered-float = "4.2"
itertools = "0.12"
dyn-clone = "1.0"
trait-set = "0.3"
paste = "1.0"
rust-embed = { version = "8.2", features = ["include-exclude"] }
take_mut = "0.2"
unicode-segmentation = "1.11"
never = "0.1"
substack = "1.1"
intern-all = "0.4.1"
once_cell = "1.19"
const_format = "0.2"
bound = "0.5"
# Dependencies of orcx
clap = { version = "4.5", features = ["derive"] }
rayon = "1.8"
termsize = "0.1"
